ejemplos con pug

--- a/pug/pug/04_atributos_literales.pug
+++ b/pug/pug/04_atributos_literales.pug
@@ -1,8 +1,8 @@
 doctype
 html(lang="es")
 	head
-		meta
-		title
+		meta(charset='UTF-8')
+		title Atributos literales
 	body
 		h1 Atributos Literales
 		hr
