--- a/pug/pug/06_javascript.pug
+++ b/pug/pug/06_javascript.pug
@@ -2,7 +2,7 @@ doctype
 html(lang="es")
 	head
 		meta(charset="UTF-8")
-		title Document
+		title Documento con javascript
 	body
 		h1 Javascript
 		hr
@@ -10,7 +10,7 @@ html(lang="es")
 		script.
 			var res=document.getElementById('respuesta');
 			var pre=prompt('cuanto es 5+6?');
-			if(pre== 11){
+			if(pre == 11){
 				res.innerHTML='respuesta correcta';
 			}else{
 			    res.innerHTML='respuesta Incorrecta';
