--- a/pug/pug/03_atributos_estilos.pug
+++ b/pug/pug/03_atributos_estilos.pug
@@ -1,8 +1,8 @@
 doctype
 html(lang="es")
 	head
-		meta
-		title
+		meta(charset='UTF-8')
+		title estilos de los atributos
 	body
 		h1 Estilos de los atributos
 		hr
