--- a/pug/pug/09_comentarios.pug
+++ b/pug/pug/09_comentarios.pug
@@ -1,12 +1,14 @@
 doctype
 html(lang='es')
 	head
-		meta(metacharset='UTF-8')
+		meta(charset='UTF-8')
 		title Comentarios
 	body
-	//comentarios de una sola linea	
-	//-comentario que no aparece en html
-	//-comentario en bloque
-		 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, atque! Corrupti corporis voluptatum perspiciatis quod perferendis fuga, quasi modi laboriosam nam dolorem consequuntur iusto consectetur, rem esse! Quidem, labore ducimus!
-	//comentario en bloque 
-		 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis voluptatibus sint reiciendis accusantium repellat pariatur beatae dignissimos, officiis voluptas qui consequatur eveniet quo consequuntur asperiores veniam, temporibus, architecto rerum quidem?
+		h1 Comentarios
+		hr
+		//comentario linea (se ve en el marcado)
+		//-comentario linea PUG no se ve en el marcado
+		// Comentario de bloque ( se ve en el marcado)
+			 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus similique, unde iure assumenda in cumque deserunt, dicta commodi, quos labore voluptates ex doloremque facilis vitae, fugiat sequi vero mollitia veniam!
+		//-comentario de bloque (no se ve en le marcado)
+			 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error delectus velit consequuntur, voluptas at repellat quas amet accusantium et beatae explicabo, possimus aliquam eveniet asperiores distinctio consequatur rerum, accusamus dicta!
