--- a/pug/pug/11_tipos_documentos.pug
+++ b/pug/pug/11_tipos_documentos.pug
@@ -1,9 +1,14 @@
-doctype
+//html 5
+doctype html
+|
+|
+// xml
 doctype xml
-doctype tansitional
+|
+|
+//html strict
 doctype strict
-doctype frameset
-doctype 1.1
-doctype basic
-doctype mobile
-doctype plist
+|
+|
+// html transitional
+doctype transitional
